<resources>
    <string name="app_name">Hack Udaipur</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="phone">Phone Number</string>
    <string name="add_new_user">Add New User</string>
    <string name="add_user">Add User</string>
    <string name="SELECTED_USER_ID" translatable="false">selected_user</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="delete_user">Delete Current User</string>
    <string name="delete_confirm_message">Are you sure you want to delete this user?</string>
    <string name="user_will_be_deleted_permanently">User will be deleted permanently. Data cannot be recovered</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="SELECTED_USER_NAME" translatable="false">selected_user_name</string>
    <string name="conti">Continue</string>
    <string name="continue_to_diagnosis">Continue to Diagnosis</string>
    <string name="continue_to_diagnosis_message">Do you want to continue to medical diagnosis or skip it?</string>
    <string name="skip_diagnosis">Skip Diagnosis</string>
    <string name="visit_centre">Visit your nearest Diagnosis Centre to complete the procedure</string>
    <string name="age">Age</string>
    <string name="weight">Weight</string>
    <string name="allergies">Allergies (if any)</string>
    <string name="aadhaar">Aadhaar Number</string>
    <string name="sym1" translatable="false">1</string>
    <string name="sym2" translatable="false">2</string>
    <string name="sym3" translatable="false">3</string>
    <string name="sym4" translatable="false">4</string>
    <string name="sym5" translatable="false">5</string>
    <string name="sym6" translatable="false">6</string>
    <string name="sym7" translatable="false">7</string>
    <string name="sym8" translatable="false">8</string>
    <string name="in_progress">In Progress</string>
    <string name="waiting_for_diagnosis">Waiting for diagnosis...</string>
    <string name="khama_gani">Khamma Ghani</string>
    <string name="start_medical_diagnosis">Start Medical Diagnosis</string>
    <string name="create_a_user">Create A User</string>
    <string name="select_a_user">Select a User</string>
    <string name="no_users_available">No Users Available</string>
    <string name="please_create_user">Please Create a User</string>
    <string name="ok">Ok</string>
    <string name="report">Report</string>
    <string name="paracetamol">Take Paracetamol 500 mg thrice a day</string>
    <string name="acidity">Take Ofloxacin and Ornidazole twice a day and Ranitidine once a day</string>
    <string name="domperidole">Take Ofloxacin and Ornidazole twice a day and Domperidole once a day</string>
    <string name="severe">This is a severe case. A doctor will be referred to immediately and you will be contacted.</string>
    <string name="default_case">A doctor will see your case and you will be contacted</string>
</resources>
